# covid_tests

./: README.md  pyproject.toml
resources/: sql_queries.sql
src/covid_data_pipeline_ingestion/: 14-day notification_COVID19.ipynb  ingestion_log  main.py  utils.py
src/covid_data_pipeline_ingestion/.ipynb_checkpoints/: 14-day notification_COVID19-checkpoint.ipynb
src/covid_data_pipeline_ingestion/data/: 14-day notification_COVID19_data.csv
src/sql_scripts/: analysis.sql  create_view.sql  ddl_sql.sql
tests/: test_covid_json_data_ingestion.py
