[tool.poetry]
name = "covid_data_pipeline_ingestion"
version = "0.1.0"
description = ""
authors = ["Douglas T. S. Leite <dtsleite@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
